tests/ui/simd/monomorphize-heterogeneous.stderr
error[E0076]: SIMD vector should be homogeneous
  --> $DIR/monomorphize-heterogeneous.rs:4:1
   |
LL | struct I64F64(i64, f64);
   | ^^^^^^^^^^^^^ SIMD elements must have the same type

error: aborting due to previous error

For more information about this error, try `rustc --explain E0076`.
